Fix nfsdumpstate(8) so that it can print out INET6 callback addresses.

The patch adds support for printing of INET6 callback addresses.
It also adds the #ifdef INET, INET6 as requested by bz@.

PR:		223036
Reviewed by:	bz, rgrimes
MFC after:	2 weeks
Differential Revision:	https://reviews.freebsd.org/D19839


git-svn-id: svn+ssh://svn.freebsd.org/base/head@346190 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f